# machine-health-monitoring

./: CMakeLists.txt  Data_processor.cpp  Sensor_monitor.cpp  data_processor.cpp  index.html  package.json  ready.py  script.js  sensor_monitor.cpp  server.js
templates/: index.html
